--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,7 @@
   <h1 class="user-new">Create New Account</h1>
 
 <%= form_for @user do |f| %>
+  <li><%= f.name_field :name, :autofocus => true, placeholder: 'Name' %></li>
   <li><%= f.email_field :email, :autofocus => true, placeholder: 'Email' %></li>
   <li><%= f.password_field :password, :autofocus => true, placeholder: 'Password' %></li>
   <li><%= f.password_field :password_confirmation, :autofocus => true, placeholder: 'Confirm Password' %></li>
