--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,26 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+<style type="text/css">
+	body { padding-top: 70px; }
+</style>
 <body>
-<nav>
-	<%if signed_in?%>
-	<ul>
-		<li>Add Friend</li>
-		<li>New Recommendation</li>
-		<%= link_to '/users/logout', method: :post do %>
-      <li>Logout</li>
-    <% end %>
-	</ul>
-	<%end%>
-</nav>
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	  <div class="container">
+	  	<div class="navbar-header">
+	      <a class="navbar-brand" href="#">Brand</a>
+    	</div>
+	    <div class="collapse navbar-collapse">
+	    	<%if signed_in?%>
+	      <ul class="nav navbar-nav">
+	        <li id = "add_friend"><a href="#">Add Friend</a></li>
+					<li id = "new_rec"><a href="#">New Recommendation</a></li>
+      		<li id = "logout"><a href="#">Logout</a></li>
+	      </ul>	      
+	      <%end%>
+	    </div>
+	  </div>
+	</nav>
 
 
 <%= yield %>
