--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,10 +39,11 @@
 	        <h4 class="modal-title" id="myModalLabel">Recommend the Yumminess</h4>
 	      </div>
 	      <div class="modal-body">
+	      	<div id = "recModal_alert"> </div>
 	        <form id="restaurant_form">
 	        	<p>Search for Restaurant</p>
 						<input type="text" class="form-control" id="city" placeholder="City"/>
-						<input type="text" class="form-control" id="term" placeholder="term"/>
+						<input type="text" class="form-control" id="term" placeholder="Search term"/>
 						<button type="submit" class="btn btn-default" id = "restaurant_btn"> Enter</button>
 					</form>
 					<div id = "restaurant_results">
@@ -50,6 +51,7 @@
 					<div id = "friends">
 						<h2>Friends!</h2>
 					</div>
+
 					<button class="btn btn-default" id = "recommend_btn">Recommend</button>
 	      </div>
 	      <div class="modal-footer">
