--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	  <div class="container">
 	  	<div class="navbar-header">
-	      <a class="navbar-brand" href="#">Brand</a>
+	      <a class="navbar-brand" href="#">Yum</a>
     	</div>
 	    <div class="collapse navbar-collapse">
 	    	<%if signed_in?%>
