--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,10 +69,24 @@
 	        <h4 class="modal-title" id="myModalLabel">Foodie Friend Finder</h4>
 	      </div>
 	      <div class="modal-body">
+	      	<div id = "friendModal_alert"> </div>
 	        <form id="friend_form">
-						<input type="text" class="form-control" id="friend" placeholder="friend"/>
-						<button type="submit" class="btn btn-default" id = "friend_btn"> Enter</button>
+						<input type="text" class="form-control" id="friend" placeholder="Email"/>
+						<button type="submit" class="btn btn-default" id = "friend_btn"> Send Request</button>
 					</form>
+					<div id="waiting_requests">
+						<h4> People Who Want to Eat Food with You</h4>
+						<%unless @friend_requests.nil?%>
+							<%@friend_requests.each do |request|%>
+								<li class = "request"><%= request.name%>
+									<div>
+										<button type="button" class="btn btn-success" class="accept">Yum!</button>
+										<button type="button" class="btn btn-danger" class="reject">Nope</button>
+									</div>
+								</li>
+							<%end%>
+						<%end%>
+					</div>
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
