--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,12 +3,20 @@
   <h1 class="user-new">Create New Account</h1>
 
 <%= form_for @user do |f| %>
-  <li><%= f.name_field :name, :autofocus => true, placeholder: 'Name' %></li>
+  <li><%= f.text_field :name, :autofocus => true, placeholder: 'Name' %></li>
   <li><%= f.email_field :email, :autofocus => true, placeholder: 'Email' %></li>
   <li><%= f.password_field :password, :autofocus => true, placeholder: 'Password' %></li>
   <li><%= f.password_field :password_confirmation, :autofocus => true, placeholder: 'Confirm Password' %></li>
   <li><%=f.submit 'Create' %></li>
 <% end %>
+
+<!-- <form id="new_user_form">
+  <input type="text" class="form-control" id="name" placeholder="name"/>
+  <input type="email" class="form-control" id="email" placeholder="email"/>
+  <input type="password" class="form-control" id="password" placeholder="email"/>
+  <input type="password" class="form-control" id="confirmation" placeholder="email"/>
+  <button type="submit" class="btn btn-default" id = "friend_btn"> Create</button>
+</form> -->
 
 
 <% if @user.errors.any? %>
