--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,17 +74,20 @@
 						<input type="text" class="form-control" id="friend" placeholder="Email"/>
 						<button type="submit" class="btn btn-default" id = "friend_btn"> Send Request</button>
 					</form>
-					<div id="waiting_requests">
+					<div id="friendRequests">
 						<h4> People Who Want to Eat Food with You</h4>
 						<%unless @friend_requests.nil?%>
+							<div class="list-group">
 							<%@friend_requests.each do |request|%>
-								<li class = "request" id = <%=request.id%>><%= request.user1.name%>
-									<div>
+								<a class = "list-group-item request" id = <%=request.id%>>
+									<%= request.user1.name%>
+									<span>
 										<button type="button" class="btn btn-success accept">Yum!</button>
 										<button type="button" class="btn btn-danger reject">Nope</button>
-									</div>
-								</li>
+									</span>
+								</a>
 							<%end%>
+							</div>
 						<%end%>
 					</div>
 	      </div>
