--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,18 +1,10 @@
-	<%if signed_in?%>
-		<h2> Yum!</h2>
-		<h4>Recommendations for <%=current_user.name%>:</h4>
-		<%if @recommendations.length == 0%>
-			<p> No recommendations. Get more foodie friends!</p>
-		<%else%>
-			<% @recommendations.each do |rec| %>
-				<li> <%= rec.restaurant.name %> from <%=rec.recBy.name%></li>
-			<%end%>
-		<%end%>
-	<%else%>
-		<form id="login_form">
-		   <input type="email" class="form-control" id="email" placeholder="Email">
-		   <input type="password" class="form-control" id="password" placeholder="Password">
-		   <button type="submit" class="btn btn-default" id = "login_btn">Log in</button>
-		</form>
-		<%= link_to "sign up", new_user_path%> 
-	<%end%>
+<form accept-charset="UTF-8" action="/login" method="get">
+  <div class="form-group">
+    <input class="form-control" id="user_email" name="user[email]" type="email" placeholder="email">
+  </div>
+  <div class="form-group">
+    <input class="form-control" id="user_password" name="user[password]" type="password" placeholder = "password">
+  </div>
+  <input class="btn btn-default" name="commit" type="submit" value="Log In">
+</form>
+<%= link_to "sign up", new_user_path%> 
