--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,12 +13,8 @@
 
 
 
-<% if @user.errors.any? %>
-  <ul>
-    <% @user.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
+<% unless @error.nil? %>
+  <p> <%=@error%></p>
 <% end %>
 
 </div>
