--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,7 @@
  body,html{
  	padding-top: 20px;
  	height:100%;
+ 	width:100%;
  }
 
 #loginpage{
@@ -35,4 +36,13 @@
 
 .white{
 	color: white;
+}
+
+.reccomendationBox{
+	padding: 20px;
+	background-color: ghostwhite;
+}
+
+.recommendation{
+
 }
