--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -2,7 +2,7 @@
 <h2 class = "text-center"> Yum!</h2>
 <h4 class = "text-center">Recommendations for <%=@user.name%>:</h4>
 <%if @recommendations.length == 0%>
-	<p> No recommendations. Get more foodie friends!</p>
+	<p class = "text-center"> No recommendations. Get more foodie friends!</p>
 <%end%>
 	<div id ="recommendationList" class="col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-6 col-sm-offset-3"></div>
 </div>
